--- a/BasePatchGenerator/BasePatchGenerator.csproj
+++ b/BasePatchGenerator/BasePatchGenerator.csproj
@@ -5,11 +5,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D91E0DD6-AF9F-4293-A2E0-D27C508C3883}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{9A0541F2-7595-40A8-A532-4DEDE7F78215}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Assembly</RootNamespace>
-    <AssemblyName>Assembly</AssemblyName>
+    <RootNamespace>BasePatchGenerator</RootNamespace>
+    <AssemblyName>BasePatchGenerator</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -26,7 +26,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <LangVersion>6</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -36,41 +35,40 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <LangVersion>6</LangVersion>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
+  <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Program.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Assembly\Assembly.csproj">
+      <Project>{d91e0dd6-af9f-4293-a2e0-d27c508c3883}</Project>
+      <Name>Assembly</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\EnemizerLibrary\EnemizerLibrary.csproj">
+      <Project>{e6d1c409-e9de-42b9-bd0b-b6f07eac31b4}</Project>
+      <Name>EnemizerLibrary</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PreBuildEvent>cd $(ProjectDir)
-
-"..\bincomp\bincomp.exe" main.asm patchData.json
-copy patchData.json $(SolutionDir)
-copy patchData.json $(SolutionDir)EnemizerGui\
-copy patchData.json $(SolutionDir)EnemizerGui\$(OutDir)
-copy patchData.json $(SolutionDir)EnemizerTests\$(OutDir)
-copy patchData.json $(SolutionDir)EnemizerCLI\
-copy patchData.json $(SolutionDir)EnemizerCLI\$(OutDir)
-copy patchData.json $(SolutionDir)BasePatchGenerator\
-copy patchData.json $(SolutionDir)BasePatchGenerator\$(OutDir)
-copy exported_symbols.txt $(SolutionDir)
-copy exported_symbols.txt $(SolutionDir)EnemizerGui\
-copy exported_symbols.txt $(SolutionDir)EnemizerGui\$(OutDir)
-copy exported_symbols.txt $(SolutionDir)EnemizerTests\$(OutDir)
-copy exported_symbols.txt $(SolutionDir)EnemizerCLI\
-copy exported_symbols.txt $(SolutionDir)EnemizerCLI\$(OutDir)
-copy exported_symbols.txt $(SolutionDir)BasePatchGenerator\
-copy exported_symbols.txt $(SolutionDir)BasePatchGenerator\$(OutDir)
-</PreBuildEvent>
-  </PropertyGroup>
-  <PropertyGroup>
-    <DisableFastUpToDateCheck>true</DisableFastUpToDateCheck>
-  </PropertyGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
